# dedupe_copy

./: .gitignore  CHANGELOG.md  README.md  benchmark_ignore_pattern.py  pyproject.toml  requirements-full.txt  requirements.txt  setup.py
.github/: CODEOWNERS  FUNDING.yml
.github/workflows/: coverage-comment.yml  flake-and-tests.yml
dedupe_copy/: __init__.py  __main__.py  config.py  core.py  dedupe_copy.py  disk_cache_dict.py  logging_config.py  manifest.py  path_rules.py  progress_worker.py  threads.py  ui.py  utils.py  utils_dedupe.py  web_service.py
dedupe_copy/test/: benchmark_hashing.py  benchmark_manifest_save.py  record_disk_cache_dict_performance.py  record_manifest_save_performance.py  test_advanced.py  test_app_utils.py  test_cli_bugs.py  test_cli_integration.py  test_cli_validation.py  test_compare_flag.py  test_copy.py  test_copy_deadlock.py  test_copy_enhanced.py  test_copy_race_condition.py  test_core.py  test_core_coverage.py  test_core_logic.py  test_delete.py  test_disk_cache_dict.py  test_e2e_scenarios.py  test_empty_files.py  test_golden_dir.py  test_hashing.py  test_logging_config.py  test_main.py  test_manifest_combine.py  test_manifest_explorer.py  test_manifest_memory.py  test_manifest_performance.py  test_manifest_resource_leak.py  test_manifests.py  test_no_walk.py  test_scenarios.py  test_threads.py  test_user_scenarios.py  test_verify.py  test_walk_race_condition.py  test_web_service.py  utils.py
docs/: golden_dir_use_case.md
