[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "DedupeCopy"
version = "1.0.0"
description = "Find duplicates / copy and restructure file layout command-line tool"
readme = "README.txt"
requires-python = ">=3.8"
license = {text = "BSD-2-Clause"}
authors = [
    {name = "Erik Schweller", email = "othererik@gmail.com"}
]
maintainers = [
    {name = "Erik Schweller", email = "othererik@gmail.com"}
]
keywords = [
    "de-duplication",
    "file management",
    "deduplication",
    "file-copy",
    "backup",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Topic :: Utilities",
    "Topic :: System :: Filesystems",
]

[project.urls]
Homepage = "https://pypi.python.org/pypi/DedupeCopy/"
Repository = "https://www.github.com/othererik/dedupe_copy"

[project.scripts]
dedupecopy = "dedupe_copy.bin.dedupecopy:run_cli"

[tool.setuptools]
packages = ["dedupe_copy", "dedupe_copy.test"]

[tool.setuptools.package-data]
dedupe_copy = ["bin/*"]
